...
  }, [debouncedSearchTerm]);

  return (
    <Pressable
      style={styles.pressable}
      onPress={() => Keyboard.dismiss()}
      testID="search-view"
    >
      <ErrorView errors={[errorMsg]} />
      <View style={styles.container}>
        <Image source={searchIcon} style={styles.icon} />
        <TextField
          testID="text-input"
          placeholder={strings.searchPlaceholder}
          autoFocus
          onChangeText={handleChangeText}
          style={styles.input}
          clearButtonMode="while-editing"
        />
...
